--- a/paper/main.tex
+++ b/paper/main.tex
@@ -53,7 +53,8 @@ Version 1.0 \quad | \quad Date: 16 September 2025\par
 \begin{tabular}{p{0.9\textwidth}}
 \textbf{Abstract}\\[0.2cm]
 Modern transactional systems span multiple services and networks. Failures, retries, and out-of-order delivery make it hard to guarantee that no transaction is missed. CRIITS defines four canonical phases—CR (Created), I (Initiated), I (0..n Intermediary), and TS (Terminal State)—plus operating invariants, a reference architecture, and a polling \& reconciliation strategy to deliver observability and finality across domains.\\[0.3cm]
-\textbf{License}: CC BY 4.0 \quad \textbar\  \textbf{Contact}: \href{mailto:ankit@example.com}{ankit@example.com} \quad \textbar\  \textbf{DOI}: (to be minted)\\
+\textbf{License}: CC BY 4.0 \quad \textbar\  \textbf{Contact}: \href{mailto:connect@ankitmalhotra.com}{connect@ankitmalhotra.com} \quad \textbar\  
+\textbf{DOI}: \href{https://doi.org/10.5281/zenodo.17132329}{10.5281/zenodo.17132329}
 \end{tabular}
 \vfill
 \end{titlepage}
