--- a/paper/main.tex
+++ b/paper/main.tex
@@ -49,15 +49,20 @@
 {\large \textbf{Author:} Ankit Malhotra}\par
 \vspace{0.2cm}
 Version 1.0 \quad | \quad Date: 16 September 2025\par
+
+% --- DOI badge (clickable) ---
+\vspace{0.5cm}
+\href{https://doi.org/10.5281/zenodo.17132329}{\includegraphics[height=0.9cm]{zenodo_badge.png}}
+
 \vfill
 \begin{tabular}{p{0.9\textwidth}}
 \textbf{Abstract}\\[0.2cm]
 Modern transactional systems span multiple services and networks. Failures, retries, and out-of-order delivery make it hard to guarantee that no transaction is missed. CRIITS defines four canonical phases—CR (Created), I (Initiated), I (0..n Intermediary), and TS (Terminal State)—plus operating invariants, a reference architecture, and a polling \& reconciliation strategy to deliver observability and finality across domains.\\[0.3cm]
-\textbf{License}: CC BY 4.0 \quad \textbar\  \textbf{Contact}: \href{mailto:connect@ankitmalhotra.com}{connect@ankitmalhotra.com} \quad \textbar\  
-\textbf{DOI}: \href{https://doi.org/10.5281/zenodo.17132329}{10.5281/zenodo.17132329}
+\textbf{License}: CC BY 4.0 \quad \textbar\  \textbf{Contact}: \href{mailto:connect@ankitmalhotra.com}{connect@ankitmalhotra.com} \quad \textbar\  \textbf{DOI}: \href{https://doi.org/10.5281/zenodo.17132329}{10.5281/zenodo.17132329}\\
 \end{tabular}
 \vfill
 \end{titlepage}
+
 
 \tableofcontents
 \newpage
