--- a/references.bib
+++ b/references.bib
@@ -1,18 +1,29 @@
-@misc{sagas,
-  title={Sagas},
-  author={Hector Garcia-Molina and Kenneth Salem},
-  year={1987},
-  howpublished={ACM SIGMOD}
+@misc{Malhotra2025CRIITS,
+  author    = {Ankit Malhotra},
+  title     = {CRIITS: A Transaction-Agnostic State Machine for Reliable End-to-End Processing},
+  year      = {2025},
+  publisher = {Zenodo},
+  doi       = {10.5281/zenodo.17132329},
+  url       = {https://doi.org/10.5281/zenodo.17132329}
 }
-@misc{outbox,
-  title={The Outbox Pattern},
-  author={Various},
-  year={2017},
-  howpublished={Microservices patterns}
+
+@inproceedings{GarciaMolina1987Sagas,
+  author    = {Hector Garcia-Molina and Kenneth Salem},
+  title     = {Sagas},
+  booktitle = {ACM SIGMOD},
+  year      = {1987}
 }
-@misc{eventsourcing,
-  title={Event Sourcing},
-  author={Gregor Hohpe and Martin Fowler},
-  year={2005},
-  howpublished={martinfowler.com}
+
+@misc{OutboxPattern,
+  title     = {The Outbox Pattern},
+  author    = {Various},
+  year      = {2017},
+  note      = {Common microservices reliability pattern}
+}
+
+@misc{EventSourcing,
+  author    = {Martin Fowler and Gregor Hohpe},
+  title     = {Event Sourcing},
+  year      = {2005},
+  howpublished = {martinfowler.com}
 }
