--- a/paper/main.tex
+++ b/paper/main.tex
@@ -6,8 +6,10 @@
 \usepackage{enumitem}
 \usepackage{graphicx}
 \usepackage{tikz}
+\usetikzlibrary{positioning,arrows.meta,shapes.misc,fit,calc}
 \usepackage{listings}
 \usepackage{xcolor}
+\usepackage{adjustbox} % for \adjustbox max width
 
 \hypersetup{
   colorlinks=true,
@@ -48,11 +50,10 @@
 \vspace{1.5cm}
 {\large \textbf{Author:} Ankit Malhotra}\par
 \vspace{0.2cm}
-Version 1.0 \quad | \quad Date: 16 September 2025\par
+Version 2.1 \quad | \quad Date: 25 September 2025\par
 
 % --- DOI badge (clickable) ---
 \vspace{0.5cm}
-\href{https://doi.org/10.5281/zenodo.17132329}{\includegraphics[height=0.9cm]{zenodo_badge.png}}
 
 \vfill
 \begin{tabular}{p{0.9\textwidth}}
@@ -63,75 +64,83 @@ Modern transactional systems span multiple services and networks. Failures, retr
 \vfill
 \end{titlepage}
 
-
 \tableofcontents
 \newpage
-
-\section{Introduction}
-Distributed systems push business logic across APIs, queues, databases, and third-party gateways. Each hop introduces places to lose context or double-act on messages. Patterns like Sagas, Event Sourcing, and CQRS help, but teams still reinvent status semantics and pollers per use case.
-CRIITS proposes a small, standard state machine and operating convention to unify tracking, bound failure handling, and make “missed transaction” a measurable, alertable condition—remaining agnostic to domain (payments, KYC, logistics, content moderation, etc.).
 
 \section{The CRIITS Model}
 \subsection{Canonical States}
 \begin{itemize}[leftmargin=*]
 \item \textbf{CR — Created}: Transaction accepted by the system of record (SOR). ID minted, minimal validation passed, persistence guaranteed.
 \item \textbf{I — Initiated}: Execution has started (request sent to downstream or workflow engaged).
-\item \textbf{I — Intermediary (0..n)}: Checkpoints representing externally verifiable progress (e.g., 3-DS required, vendor acknowledged, shipment picked).
-\item \textbf{TS — Terminal State}: Finality with mutually exclusive outcomes: TS.SUCCEEDED, TS.FAILED, TS.CANCELED, TS.EXPIRED.
+\item \textbf{I — Intermediary (0..n)}: Checkpoints representing externally verifiable progress.
+\item \textbf{TS — Terminal State}: Finality with mutually exclusive outcomes: TS.SUCCEEDED, TS.FAILED, TS.EXPIRED.
 \end{itemize}
-
-\subsection{Invariants}
-\begin{enumerate}[leftmargin=*]
-\item \textbf{Monotonicity}: forward-only transitions CR $\to$ I $\to$ I* $\to$ TS.
-\item \textbf{Completeness}: every transaction eventually reaches a single TS.
-\item \textbf{Idempotency}: replaying the same transition is safe.
-\item \textbf{Auditability}: transitions are append-only with causality metadata.
-\end{enumerate}
 
 \subsection{State Machine Diagram}
 \begin{figure}[h]
 \centering
-\begin{tikzpicture}[node distance=2.4cm, >=stealth, thick, auto]
-\tikzstyle{state}=[rectangle, rounded corners, draw, minimum width=2.6cm, minimum height=0.9cm]
-\node[state] (cr) {CR};
-\node[state, right of=cr] (i) {I};
-\node[state, right of=i] (istar) {I*};
-\node[state, right of=istar] (ts) {TS};
-\path[->] (cr) edge node {start\_execution} (i);
-\path[->] (i) edge[bend left] node {vendor\_ack / checkpoint} (istar);
-\path[->] (istar) edge[bend left] node {more checkpoints} (i);
-\path[->] (i) edge node {success\_confirmed} (ts);
-\path[->] (i) edge[bend right] node[below] {timeout} (ts);
+\begin{adjustbox}{max width=\textwidth}
+\begin{tikzpicture}[>=Latex, node distance=2.2cm, every node/.style={font=\small}]
+\tikzstyle{state}=[rectangle, rounded corners, draw, minimum width=2.6cm, minimum height=0.9cm, align=center, fill=gray!5]
+
+% Strictly horizontal pipeline
+\node[state] (cr) {CR\\Created};
+\node[state, right=2.0cm of cr] (i) {I\\Initiated};
+\node[state, right=2.0cm of i] (ic1) {I.CHK1};
+\node[state, right=2.0cm of ic1] (ic2) {I.CHK2};
+\node[state, right=2.0cm of ic2] (ts) {TS.\{SUCCEEDED\;|\;FAILED\;|\;EXPIRED\}};
+
+% Edges
+\draw[->] (cr) -- node[above] {start} (i);
+\draw[->] (i) -- node[above] {vendor\_ack} (ic1);
+\draw[->] (ic1) -- node[above] {progress} (ic2);
+\draw[->] (ic2) -- node[above] {finalize} (ts);
+\draw[->, dashed] (i) to[bend right=15] node[below] {timeout} (ts);
+
+% Notes
+\node[draw, align=left, rounded corners, fill=blue!3, inner sep=6pt, above=0.8cm of ic1] (legend) {%
+\textbf{Notes}: Forward-only transitions; 0..n checkpoints; TS is immutable.};
 \end{tikzpicture}
-\caption{CRIITS canonical state progression with example events.}
+\end{adjustbox}
+\caption{CRIITS state machine laid out in a single horizontal line; auto-scaled to page width.}
 \end{figure}
 
 \section{Reference Architecture}
-Core components: Transaction Gateway, Orchestrator/Workers, Append-only Event Log, State Projection, Dispatchers (webhook emitter + outbox), Poller/Reconciler, Dead-Letter \& Triage.
 
 \subsection{Component Diagram}
 \begin{figure}[h]
 \centering
-\begin{tikzpicture}[node distance=1.8cm, >=stealth, thick, auto]
-\tikzstyle{box}=[rectangle, draw, rounded corners, minimum width=3.4cm, minimum height=1cm]
-\node[box] (client) {Clients / Producers};
-\node[box, right=of client] (tg) {Transaction Gateway};
-\node[box, right=of tg] (elog) {Append-only Event Log};
-\node[box, below=of elog] (proj) {State Projection (tx\_head)};
-\node[box, below=of tg] (orch) {Orchestrator / Workers};
-\node[box, right=of elog, xshift=3.6cm] (ext) {External Vendors};
-\node[box, below=of proj] (poll) {Poller / Reconciler};
-\node[box, below=of orch] (dlq) {Dead-Letter \& Triage};
-\path[->] (client) edge (tg);
-\path[->] (tg) edge node {CR} (elog);
-\path[->] (orch) edge[bend left] node {I/TS events} (elog);
-\path[->] (elog) edge (proj);
-\path[->] (proj) edge (poll);
-\path[->] (orch) edge (dlq);
-\path[->] (orch) edge[bend left] node {Idempotent calls} (ext);
-\path[->] (poll) edge[bend left] node {Reconcile} (ext);
+\begin{adjustbox}{max width=\textwidth}
+\begin{tikzpicture}[>=Latex, node distance=1.4cm, every node/.style={font=\small}]
+\tikzstyle{comp}=[rectangle, draw, rounded corners, minimum width=3.4cm, minimum height=1.0cm, align=center, fill=gray!5]
+
+% Top row (purely horizontal)
+\node[comp] (clients) {Clients / Producers};
+\node[comp, right=2.2cm of clients] (tg) {Transaction Gateway\\(mint \texttt{tid}, write CR)};
+\node[comp, right=2.2cm of tg] (elog) {Append-only Event Log\\(Kafka/Pulsar/DB)};
+\node[comp, right=2.2cm of elog] (vendors) {External Vendors\\(idempotent APIs/files)};
+
+% Bottom row (still horizontal)
+\node[comp, below=1.2cm of tg] (orch) {Orchestrator / Workers\\(emit I/TS events)};
+\node[comp, below=1.2cm of elog] (proj) {State Projection\\(\texttt{tx\_head} view)};
+\node[comp, below=1.2cm of vendors] (poll) {Poller / Reconciler\\(adaptive backoff + files)};
+\node[comp, below=1.2cm of clients, xshift=0.0cm] (dlq) {Dead-Letter \& Triage};
+
+% Connections kept clean and horizontal where possible
+\draw[->] (clients) -- (tg);
+\draw[->] (tg) -- node[above] {CR} (elog);
+\draw[->] (orch) -- (elog);
+\draw[->] (elog) -- (proj);
+\draw[->] (proj) -- (poll);
+\draw[->] (orch) -- (dlq);
+\draw[->] (orch.east) .. controls +(1.8,0.0) and +(-1.8,0.0) .. node[above] {idempotent calls} (vendors.west);
+\draw[->] (poll.north) -- ++(0,0.6) -| node[pos=0.25, above] {reconcile} (vendors.south);
+
+% Group box for core
+\node[draw, dashed, rounded corners, fit=(tg) (elog) (orch) (proj) (poll) (dlq), label={[align=center]north:Core CRIITS Services}, inner sep=8pt] {};
 \end{tikzpicture}
-\caption{Reference architecture for CRIITS deployment.}
+\end{adjustbox}
+\caption{All boxes arranged left-to-right; scaled to fit page width.}
 \end{figure}
 
 \section{Implementation Guide}
@@ -187,7 +196,7 @@ Confining lifecycles to CR $\to$ I $\to$ I* $\to$ TS with strict invariants, ide
 \begin{itemize}[leftmargin=*]
 \item CR
 \item I.* (namespaced): I.AUTH\_REQUIRED, I.AUTHORIZED, I.CAPTURE\_PENDING
-\item TS.SUCCEEDED \textbar\ TS.FAILED \textbar\ TS.CANCELED \textbar\ TS.EXPIRED
+\item TS.SUCCEEDED \textbar\ TS.FAILED \textbar\ TS.EXPIRED
 \end{itemize}
 Reason codes (examples): PG\_DECLINED, TIMEOUT, INVALID\_INPUT, RETRY\_BUDGET\_EXCEEDED, DOWNSTREAM\_5XX, HUMAN\_REJECTED.
 
@@ -219,33 +228,5 @@ FROM tx_head
 WHERE state LIKE 'I.%'
   AND last_changed_at < now() - interval '15 minutes';
 \end{lstlisting}
-
-\section{Appendix D: Operator Playbook (RMG / Poker Example)}
-\subsection*{Scope}
-Applies CRIITS to deposits, withdrawals, KYC, table buy-ins, and game-result settlements in a real-money gaming (RMG) poker platform.
-
-\subsection*{KPIs}
-TTF (CR$\to$TS) per flow; Stalled Rate in I.AUTH\_REQUIRED, I.KYC\_REVIEW, I.CAPTURE\_PENDING; Duplicate Events per producer; Missed-by-Push vs Rescued-by-Poll.
-
-\subsection*{Alerting}
-\begin{itemize}[leftmargin=*]
-\item High: Stalled Rate > 2\% for > 10 min in any I-state.
-\item High: TTF P95 breach vs SLA (e.g., deposits > 2 min, withdrawals > 2 hours).
-\item Medium: Duplicate Event Rate > 0.1\% over 5 min window.
-\item Medium: Vendor webhook silence > 15 min; switch to aggressive polling policy.
-\end{itemize}
-
-\subsection*{Runbooks}
-\textbf{Deposits}: If in I.CAPTURE\_PENDING beyond 15 min, query settlement file; on match, emit TS.SUCCEEDED with evidence; else, escalate and auto-create ticket.
-\newline
-\textbf{Withdrawals}: If I.MANUAL\_REVIEW beyond 24h, batch notify Risk; auto-expire to TS.EXPIRED with reason if KYC outdated.
-\newline
-\textbf{KYC}: If vendor mismatch in evidence, route to HUMAN\_REVIEW and enforce TS on resolution; ensure new transactions reference parent\_tid for reversals.
-
-\subsection*{Dashboards}
-Funnel per flow; Dwell heatmap by state; Failure codes by vendor; Real-time Missed-by-Push vs Rescued-by-Poll.
-
-\section{Appendix E: References}
-{\small See \texttt{references.bib} for canonical patterns: Sagas, Outbox, Event Sourcing.}
 
 \end{document}
